--- a/python-leccion8-funciones-intro.ipynb
+++ b/python-leccion8-funciones-intro.ipynb
@@ -35,10 +35,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "numero1 = input(\"introduce tu primer numero\")\n",
+    "numero2 = input(\"introduce tu segundo numero\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def sumando (numero1, numero2):\n",
+    "    if numero1 == \" \":\n",
+    "        numero1 = \"0\"\n",
+    "    if numero2 == \" \":\n",
+    "        numero2 = \"0\"\n",
+    "\n",
+    "    numero1_int = int(numero1)\n",
+    "    numero2_int = int(numero2)\n",
+    "    suma_total = numero1_int + numero2_int\n",
+    "    return str(suma_total)\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'39'"
+      ]
+     },
+     "execution_count": 67,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sumando(numero1, numero2)"
+   ]
   },
   {
    "attachments": {},
@@ -60,10 +103,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "arr1 = [13, 64, 15, 17, 88]\n",
+    "arr2 = [23, 14, 53, 17, 80]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def ganador(arr1, arr2):\n",
+    "    resultado = []\n",
+    "    for tupla in zip(arr1, arr2):\n",
+    "        if tupla[0] >= tupla[1]:\n",
+    "            resultado.append(tupla[0])\n",
+    "        \n",
+    "        elif tupla[0] < tupla[1]:\n",
+    "            resultado.append(tupla[1])\n",
+    "    return resultado"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[23, 64, 53, 17, 88]"
+      ]
+     },
+     "execution_count": 81,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ganador(arr1, arr2)"
+   ]
   },
   {
    "attachments": {},
@@ -84,6 +167,69 @@
     "        \"Ocvl@GamFLAFkixkS\" => \"((()(()()))))(()(\"\n",
     "    ```"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 92,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def parentesis(string):\n",
+    "    resultado = \"\"\n",
+    "    for i in string:\n",
+    "        if string.count(i) > 1:\n",
+    "            resultado += \")\"\n",
+    "        else:\n",
+    "            resultado += \"(\"\n",
+    "    return resultado"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 93,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'((('"
+      ]
+     },
+     "execution_count": 93,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "parentesis(\"din\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 95,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'()()()'"
+      ]
+     },
+     "execution_count": 95,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "parentesis(\"recede\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -164,7 +310,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.10.9"
   },
   "orig_nbformat": 4
