--- a/python-leccion8-funciones-intro.ipynb
+++ b/python-leccion8-funciones-intro.ipynb
@@ -17,7 +17,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    " -1 Cread una función que reciba 2 números enteros en forma de string como entrada, y dé como resultado la suma (también en forma de string)\n",
+    " - 1. Cread una función que reciba 2 números enteros en forma de string como entrada, y dé como resultado la suma (también en forma de string)\n",
+    " \n",
     "    Condiciones:\n",
     "     - Si los dos parámetros que recibe la función son strings vacíos la función nos debe devolver \"0\"\n",
     "     - Si el primer parámetro es un string vacío, la función nos devuelve el valor del segundo parámetro y viceversa.\n",
@@ -88,7 +89,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    " -2 El objetivo es comparar cada par de enteros de 2 listas, y devolver una nueva lista con el número mayor de la comapración..\n",
+    " - 2. El objetivo es comparar cada par de enteros de 2 listas, y devolver una nueva lista con el número mayor de la comapración..\n",
     "        \n",
     "      Probad la función para las siguientes listas: \n",
     "        \n",
@@ -155,7 +156,7 @@
    "source": [
     "\n",
     "\n",
-    " 3- El objetivo de este ejercicio es convertir un string en un nuevo string en el que cada carácter del nuevo string es \"(\" si ese carácter aparece sólo una vez en el string original, o \")\" si ese carácter aparece más de una vez en el string. Nuestro código no tiene que ser case sensitive, es decir, si hay una letra en mayúscula y en minúscula cuenta como dos apariciones.\n",
+    " - 3. El objetivo de este ejercicio es convertir un string en un nuevo string en el que cada carácter del nuevo string es \"(\" si ese carácter aparece sólo una vez en el string original, o \")\" si ese carácter aparece más de una vez en el string. Nuestro código no tiene que ser case sensitive, es decir, si hay una letra en mayúscula y en minúscula cuenta como dos apariciones.\n",
     "        \n",
     "    Probad la función para los siguientes strings:\n",
     "\n",
@@ -170,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -183,26 +184,6 @@
     "        else:\n",
     "            resultado += \"(\"\n",
     "    return resultado"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'((()(()()))))(()('"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "parentesis(\"Ocvl@GamFLAFkixkS\")"
    ]
   },
   {
@@ -222,6 +203,7 @@
     }
    ],
    "source": [
+    "#Resultado esperado: \"(((\"\n",
     "parentesis(\"din\")"
    ]
   },
@@ -242,6 +224,7 @@
     }
    ],
    "source": [
+    "#Resultado esperado: \"()()()\"\n",
     "parentesis(\"recede\")"
    ]
   },
@@ -262,6 +245,7 @@
     }
    ],
    "source": [
+    "#Resultado esperado: \")())())\"\n",
     "parentesis(\"Success\")"
    ]
   },
@@ -282,7 +266,29 @@
     }
    ],
    "source": [
+    "#Resultado esperado: \"))((\" \n",
     "parentesis(\"(( @\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'((()(()()))))(()('"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Resultado esperado: \"((()(()()))))(()(\"\n",
+    "parentesis(\"Ocvl@GamFLAFkixkS\")\n"
    ]
   },
   {
@@ -314,10 +320,71 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def recetas(diccionario_receta, diccionario_ingredientes):\n",
+    "\n",
+    "    cantidades = []\n",
+    "\n",
+    "    for key in diccionario_receta.keys():\n",
+    "\n",
+    "        if key in diccionario_ingredientes.keys():\n",
+    "\n",
+    "            cantidades.append(diccionario_ingredientes[key]//diccionario_receta[key])\n",
+    "        \n",
+    "        else:\n",
+    "            return \"No tienes ingredientes suficientes para hacer el pastel\"\n",
+    "    \n",
+    "    return min(cantidades)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "receta1 = {'flour': 500, 'sugar': 200, 'eggs': 1}\n",
+    "ingredientes1 = {'flour': 1200, 'sugar': 1200, 'eggs': 5, 'milk': 200}\n",
+    "\n",
+    "recetas(receta1, ingredientes1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'No tienes ingredientes suficientes para hacer el pastel'"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "receta2 = {'apples': 3, 'flour': 300, 'sugar': 150, 'milk': 100, 'oil': 100}\n",
+    "ingredientes2 = {'sugar': 500, 'flour': 2000, 'milk': 2000}\n",
+    "\n",
+    "recetas(receta2, ingredientes2)"
+   ]
   },
   {
    "attachments": {},
@@ -344,10 +411,98 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def calculadora(lista_numeros, string_operador):\n",
+    "\n",
+    "    if string_operador == \"+\":\n",
+    "\n",
+    "        resultado = sum(lista_numeros)\n",
+    "        \n",
+    "        return resultado\n",
+    "    \n",
+    "    elif string_operador == \"*\":\n",
+    "        \n",
+    "        resultado = 1\n",
+    "\n",
+    "        for num in lista_numeros:\n",
+    "\n",
+    "            resultado *= num\n",
+    "\n",
+    "        return resultado\n",
+    "    \n",
+    "    else:\n",
+    "        \n",
+    "        return \"Lo siento, necesito que me pases una operación válida.\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "12936"
+      ]
+     },
+     "execution_count": 65,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "lista1 = [11, 6, 98, 1, 2]\n",
+    "\n",
+    "calculadora(lista1, \"*\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "214"
+      ]
+     },
+     "execution_count": 66,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "lista2 = [23,34, 56, 11, 90]\n",
+    "\n",
+    "calculadora(lista2, \"+\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Lo siento, necesito que me pases una operación válida.'"
+      ]
+     },
+     "execution_count": 67,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "lista3 = [23, 4,109 , 94, 77]\n",
+    "\n",
+    "calculadora(lista3, \"-\")"
+   ]
   }
  ],
  "metadata": {
