--- a/python-leccion9-funciones-argumentos.ipynb
+++ b/python-leccion9-funciones-argumentos.ipynb
@@ -42,14 +42,172 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
-    }
-   },
+   "execution_count": 15,
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def calculadora (string_puntos1, string_puntos2, operador):\n",
+    "\n",
+    "    numero1 = string_puntos1.count(\".\")\n",
+    "    numero2 = string_puntos2.count(\".\")\n",
+    "\n",
+    "    if operador == \"suma\":\n",
+    "        resultado_numero = numero1 + numero2\n",
+    "        string_resultado = \".\" * resultado_numero\n",
+    "        if string_resultado == 0: \n",
+    "            return '\"\"'\n",
+    "        return string_resultado\n",
+    "    \n",
+    "    elif operador == \"resta\":\n",
+    "        \n",
+    "        if numero1 >= numero2:\n",
+    "            resultado_numero = numero1 - numero2\n",
+    "            string_resultado = \".\" * resultado_numero\n",
+    "            if string_resultado == 0: \n",
+    "                return '\"\"'\n",
+    "            return string_resultado\n",
+    "        else:\n",
+    "            resultado_numero = numero2 - numero1\n",
+    "            string_resultado = \".\" * resultado_numero\n",
+    "            if string_resultado == 0: \n",
+    "                return '\"\"'\n",
+    "            return string_resultado\n",
+    "    \n",
+    "    elif operador == \"multiplicacion\":\n",
+    "        resultado_numero = numero1 * numero2\n",
+    "        string_resultado = \".\" * resultado_numero\n",
+    "        if string_resultado == 0: \n",
+    "            return '\"\"'\n",
+    "        return string_resultado\n",
+    "    \n",
+    "    elif operador == \"division entera\":\n",
+    "        resultado_numero = numero1 // numero2\n",
+    "        string_resultado = \".\" * resultado_numero\n",
+    "        if string_resultado == 0: \n",
+    "            return '\"\"'\n",
+    "        return string_resultado\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'....................'"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "calculadora(\".....\", \"...............\", \"suma\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'..'"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "calculadora(\".....\", \"...\", \"resta\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'...............'"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "calculadora(\".....\",\"...\", \"multiplicacion\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'..'"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "calculadora(\".....\",\"..\", \"division entera\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "''"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "calculadora(\".\", \"..\", \"division entera\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "''"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "calculadora(\"..\", \"..\", \"resta\")"
+   ]
   },
   {
    "attachments": {},
@@ -79,13 +237,13 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
-    }
-   },
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def siguiente_año(año):\n",
+    "\n",
+    "    "
+   ]
   },
   {
    "attachments": {},
@@ -107,11 +265,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   },
@@ -155,8 +309,22 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "adalabenv",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.9"
   },
   "orig_nbformat": 4
  },
