--- a/python-leccion9-funciones-argumentos.ipynb
+++ b/python-leccion9-funciones-argumentos.ipynb
@@ -236,13 +236,76 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def siguiente_año(año):\n",
+    "def cumpleaños(año):\n",
     "\n",
-    "    "
+    "    while len(set(list(str(año)))) < 4:\n",
+    "        año +=1\n",
+    "    \n",
+    "    return año\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1023"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cumpleaños(1001)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1203"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cumpleaños(1123)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2013"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cumpleaños(2001)"
    ]
   },
   {
@@ -264,10 +327,125 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def vida_util(contenido, evaporacion, minimo):\n",
+    "\n",
+    "    contador = 0\n",
+    "    cantidad_minima = (contenido*minimo/100)\n",
+    "\n",
+    "    while contenido > cantidad_minima:\n",
+    "        contenido -= (contenido*evaporacion/100)\n",
+    "        contador +=1\n",
+    "        print(contenido)\n",
+    "\n",
+    "    return contador\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "9.0\n",
+      "8.1\n",
+      "7.289999999999999\n",
+      "6.560999999999999\n",
+      "5.9049\n",
+      "5.31441\n",
+      "4.782969\n",
+      "4.3046720999999994\n",
+      "3.8742048899999997\n",
+      "3.4867844009999995\n",
+      "3.1381059608999995\n",
+      "2.8242953648099993\n",
+      "2.5418658283289997\n",
+      "2.2876792454960997\n",
+      "2.0589113209464895\n",
+      "1.8530201888518407\n",
+      "1.6677181699666566\n",
+      "1.500946352969991\n",
+      "1.3508517176729917\n",
+      "1.2157665459056926\n",
+      "1.0941898913151233\n",
+      "0.9847709021836111\n",
+      "0.8862938119652499\n",
+      "0.797664430768725\n",
+      "0.7178979876918524\n",
+      "0.6461081889226672\n",
+      "0.5814973700304005\n",
+      "0.5233476330273604\n",
+      "0.47101286972462436\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "29"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "vida_util(10,10,5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "9.0\n",
+      "8.1\n",
+      "7.289999999999999\n",
+      "6.560999999999999\n",
+      "5.9049\n",
+      "5.31441\n",
+      "4.782969\n",
+      "4.3046720999999994\n",
+      "3.8742048899999997\n",
+      "3.4867844009999995\n",
+      "3.1381059608999995\n",
+      "2.8242953648099993\n",
+      "2.5418658283289997\n",
+      "2.2876792454960997\n",
+      "2.0589113209464895\n",
+      "1.8530201888518407\n",
+      "1.6677181699666566\n",
+      "1.500946352969991\n",
+      "1.3508517176729917\n",
+      "1.2157665459056926\n",
+      "1.0941898913151233\n",
+      "0.9847709021836111\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "22"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "vida_util(10,10,10)"
+   ]
   },
   {
    "attachments": {},
@@ -285,6 +463,126 @@
     "        73 => True\n",
     "        -1 => False\n",
     "        5099 => True"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def primos(numero):\n",
+    "\n",
+    "    if numero <= 1:\n",
+    "        return False\n",
+    "    \n",
+    "    for i in range(2, numero):\n",
+    "\n",
+    "        if (numero%i) == 0:\n",
+    "\n",
+    "            return False\n",
+    "        \n",
+    "    return True"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "primos(0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "primos(2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "primos(73)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "primos(-1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "primos(5099)"
    ]
   },
   {
