La he liado pero ya está todo solucionado no preocuparse :D

--- a/python-leccion10-clases.ipynb
+++ b/python-leccion10-clases.ipynb
@@ -5,7 +5,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Pair programming\n",
+    "# **Ejercicios de pair programming Módulo 1**\n",
+    "## **Lección 10**\n",
+    "### **Clases**\n",
+    "\n",
+    "---"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
     "1. En este ejercicio de pair programming crearemos una clase. Imaginemos que nuestro jefe nos pide que creemos una clase para tener más ordenada la información sobre cada uno de los empleados de la empresa. Para ello:\n",
     "Definid una clase que se llame Empleados\n"
    ]
@@ -71,11 +83,6 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
    "source": []
   }
  ],
