--- a/python-leccion9-funciones-argumentos.ipynb
+++ b/python-leccion9-funciones-argumentos.ipynb
@@ -604,6 +604,162 @@
     "    \n",
     "        Nota: Para 4 o más nombres, el número en \"y otros 2\" simplemente aumenta."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def megusta(lista_nombres):\n",
+    "\n",
+    "    if len(lista_nombres) == 0:\n",
+    "        \n",
+    "        return \"A nadie le gusta esto\"\n",
+    "    \n",
+    "    elif len(lista_nombres) == 1:\n",
+    "\n",
+    "        return f\"A {lista_nombres[0]} le gusta esto\"\n",
+    "    \n",
+    "    elif len(lista_nombres) == 2:\n",
+    "\n",
+    "        return f\"A {lista_nombres[0]} y {lista_nombres[1]} les gusta esto\"\n",
+    "    \n",
+    "    elif len(lista_nombres) == 3:\n",
+    "\n",
+    "        return f\"A {lista_nombres[0]}, {lista_nombres[1]} y {lista_nombres[2]} les gusta esto\"\n",
+    "    \n",
+    "    else:\n",
+    "\n",
+    "        return f\"A {lista_nombres[0]}, {lista_nombres[1]} y a {(len(lista_nombres) - 2)} más les gusta esto\"\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'A nadie le gusta esto'"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "megusta([])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'A Paola le gusta esto'"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "megusta([\"Paola\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'A Jacoba y Alex les gusta esto'"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "megusta([\"Jacoba\", \"Alex\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'A Maria, Juana y Lola les gusta esto'"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "megusta([\"Maria\", \"Juana\", \"Lola\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'A Alex, Jacoba y a 2 más les gusta esto'"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "megusta([\"Alex\", \"Jacoba\", \"Lola\", \"Carmen\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'A Alex, Jacoba y a 3 más les gusta esto'"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "megusta([\"Alex\", \"Jacoba\", \"Lola\", \"Carmen\", \"Mariana\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
