--- a/python-leccion10-clases.ipynb
+++ b/python-leccion10-clases.ipynb
@@ -24,10 +24,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "class Empleados:\n",
+    "    pass \n"
+   ]
   },
   {
    "attachments": {},
@@ -52,6 +55,23 @@
    "source": []
   },
   {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Empleados:\n",
+    "    def __init__(self, nombre, apellido, edad, posicion, año, vacaciones, herramientas):\n",
+    "        self.nombre = nombre\n",
+    "        self.apellido = apellido \n",
+    "        self.edad = edad\n",
+    "        self.posicion = posicion\n",
+    "        self.año = año\n",
+    "        self.vacaciones = vacaciones\n",
+    "        self.herramientas = herramientas\n"
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
@@ -62,10 +82,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "ana = Empleados ('Ana', 'Perez', '22', 'CEO', 2022, 60, ['Python', 'sql','agile'])"
+   ]
   },
   {
    "attachments": {},
@@ -80,15 +102,126 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "\n",
+    "class Empleados:\n",
+    "    def __init__(self, nombre, apellido, edad, posicion, año, vacaciones, herramientas):\n",
+    "        self.nombre = nombre\n",
+    "        self.apellido = apellido \n",
+    "        self.edad = edad\n",
+    "        self.posicion = posicion\n",
+    "        self.año = año\n",
+    "        self.vacaciones = vacaciones\n",
+    "        self.herramientas = herramientas\n",
+    "    \n",
+    "    def descripcion(self):\n",
+    "        \n",
+    "        return f'Ella es {self.nombre} {self.apellido}, {self.posicion}, quien lleva con nosotros en la empresa desde {self.año}. Además, este año le quedan {self.vacaciones} días de vacaciones. '\n",
+    "\n",
+    "    def calculo_vacaciones(self):\n",
+    "        vacaciones_deseadas = int(input('Cuántos días quieres irte de vacaciones?'))\n",
+    "\n",
+    "        if self.vacaciones == 0:\n",
+    "            return 'Se te acabaron las vacaciones'\n",
+    "        \n",
+    "        elif vacaciones_deseadas > self.vacaciones: \n",
+    "            return 'No tienes suficientes días de vacaciones para cumplir tus deseos'\n",
+    "        \n",
+    "        else:         \n",
+    "            self.vacaciones -= vacaciones_deseadas\n",
+    "            return self.vacaciones\n",
+    "        \n",
+    "    def cambiando_posicion (self):\n",
+    "        for i in self.herramientas:\n",
+    "            if 'Python' in i:\n",
+    "                return 'Bien hecho! Nos encanta Python! <3'\n",
+    "            \n",
+    "            elif 'Excel' in i:\n",
+    "                return '¿Te has planteado actualizar tus skills de Excel y pasarte a Python?'\n",
+    "            \n",
+    "    \n",
+    "\n",
+    "           \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ana = Empleados ('Ana', 'Perez', '22', 'CEO', 2022, 60, ['Python', 'sql','agile'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Ella es Ana Perez, CEO, quien lleva con nosotros en la empresa desde 2022. Además, este año le quedan 60 días de vacaciones. '"
+      ]
+     },
+     "execution_count": 59,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\n",
+    "ana.descripcion()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "59"
+      ]
+     },
+     "execution_count": 60,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ana.calculo_vacaciones()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Bien hecho! Nos encanta Python! <3'"
+      ]
+     },
+     "execution_count": 61,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\n",
+    "ana.cambiando_posicion()"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "adalabenv",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -102,9 +235,14 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9"
+   "version": "3.9.6"
   },
-  "orig_nbformat": 4
+  "orig_nbformat": 4,
+  "vscode": {
+   "interpreter": {
+    "hash": "31f2aee4e71d21fbe5cf8b01ff0e069b9275f58929596ceb00d14d90e3e16cd6"
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
