--- a/python-leccion9-funciones-argumentos.ipynb
+++ b/python-leccion9-funciones-argumentos.ipynb
@@ -242,7 +242,7 @@
    "source": [
     "def cumpleaños(año):\n",
     "\n",
-    "    while len(set(list(str(año)))) < 4:\n",
+    "    while len(set(str(año))) != 4:\n",
     "        año +=1\n",
     "    \n",
     "    return año\n"
