Python leccion11 terminado

--- a/python-leccion11-expresiones-regulares.ipynb
+++ b/python-leccion11-expresiones-regulares.ipynb
@@ -26,17 +26,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open('email.txt','r') as file:\n",
-    "    email = file"
+    "email = open(\"email.txt\", \"r\").read()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,10 +61,66 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "info_remitente = re.findall(\"From: .*\", email)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['From: \"Mr. Ben Suleman\" <bensul2004nng@spinfinder.com>',\n",
+       " 'From: \"MR. JAMES NGOLA.\" <james_ngola2002@maktoob.com>']"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "info_remitente"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "direcciones_email = []\n",
+    "\n",
+    "for remitente in info_remitente:\n",
+    "\n",
+    "    direcciones_email.append(re.findall(\"\\w+@\\w+\\.com\", remitente))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[['bensul2004nng@spinfinder.com'], ['james_ngola2002@maktoob.com']]"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "direcciones_email"
+   ]
   },
   {
    "attachments": {},
@@ -81,10 +136,69 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "nombre_completo = []\n",
+    "\n",
+    "for remitente in info_remitente:\n",
+    "\n",
+    "    nombre_completo.append(re.findall(\"\\w+\\.\\s\\w+\\s\\w+\", remitente)) #Cogemos str, punto, espacio, str, espacio, str"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[['Mr. Ben Suleman'], ['MR. JAMES NGOLA']]"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "nombre_completo"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "nombre_de_pila = []\n",
+    "\n",
+    "for nombre in info_remitente:\n",
+    "\n",
+    "    nombre_de_pila.append(re.findall(\"\\s\\w+\\s\", nombre))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[[' Ben '], [' JAMES ']]"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "nombre_de_pila"
+   ]
   },
   {
    "attachments": {},
@@ -98,10 +212,65 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "info_fecha = re.findall(\"Date: .*\", email)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Date: Thu, 31 Oct 2002 05:10:00', 'Date: Thu, 31 Oct 2002 02:38:20 +0000']"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "info_fecha"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fecha = []\n",
+    "\n",
+    "for date in info_fecha:\n",
+    "\n",
+    "    fecha.append(re.findall(\"\\d{2}\\s\\w{3}\\s\\d{4}\", date)) # Este Regex es: dos dígitos, espacio, tres letras, espacio, cuatro dígitos"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[['31 Oct 2002'], ['31 Oct 2002']]"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "fecha"
+   ]
   },
   {
    "attachments": {},
@@ -114,10 +283,67 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "info_asunto = re.findall(\"Subject:.*\", email)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Subject: URGENT ASSISTANCE /RELATIONSHIP (P)',\n",
+       " 'Subject: URGENT BUSINESS ASSISTANCE AND PARTNERSHIP']"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "info_asunto"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "asuntos = []\n",
+    "\n",
+    "for subject in info_asunto:\n",
+    "\n",
+    "    asuntos.append(re.findall(\"[A-Z]+\\s[A-Z]+\\s.*[A-Z]+\\s.*\", subject))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[['URGENT ASSISTANCE /RELATIONSHIP (P)'],\n",
+       " ['URGENT BUSINESS ASSISTANCE AND PARTNERSHIP']]"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "asuntos"
+   ]
   },
   {
    "attachments": {},
@@ -129,10 +355,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "diccionario_email ={\"Email\": direcciones_email, \"Nombre completo\": nombre_completo, \"Nombre de pila\": nombre_de_pila, \"Fecha\": fecha, \"Asunto\": asuntos}\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'Email': [['bensul2004nng@spinfinder.com'], ['james_ngola2002@maktoob.com']],\n",
+       " 'Nombre completo': [['Mr. Ben Suleman'], ['MR. JAMES NGOLA']],\n",
+       " 'Nombre de pila': [[' Ben '], [' JAMES ']],\n",
+       " 'Fecha': [['31 Oct 2002'], ['31 Oct 2002']],\n",
+       " 'Asunto': [['URGENT ASSISTANCE /RELATIONSHIP (P)'],\n",
+       "  ['URGENT BUSINESS ASSISTANCE AND PARTNERSHIP']]}"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "diccionario_email"
+   ]
   },
   {
    "attachments": {},
@@ -151,7 +405,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.10.9"
   },
   "orig_nbformat": 4
