Cambiado el append por el extend

--- a/python-leccion11-expresiones-regulares.ipynb
+++ b/python-leccion11-expresiones-regulares.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -80,7 +80,7 @@
        " 'From: \"MR. JAMES NGOLA.\" <james_ngola2002@maktoob.com>']"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,21 +99,21 @@
     "\n",
     "for remitente in info_remitente:\n",
     "\n",
-    "    direcciones_email.append(re.findall(\"\\w+@\\w+\\.com\", remitente))"
+    "    direcciones_email.extend(re.findall(\"\\w+@\\w+\\.com\", remitente))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[['bensul2004nng@spinfinder.com'], ['james_ngola2002@maktoob.com']]"
+       "['bensul2004nng@spinfinder.com', 'james_ngola2002@maktoob.com']"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -136,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -144,21 +144,21 @@
     "\n",
     "for remitente in info_remitente:\n",
     "\n",
-    "    nombre_completo.append(re.findall(\"\\w+\\.\\s\\w+\\s\\w+\", remitente)) #Cogemos str, punto, espacio, str, espacio, str"
+    "    nombre_completo.extend(re.findall(\"\\w+\\.\\s\\w+\\s\\w+\", remitente)) #Cogemos str, punto, espacio, str, espacio, str"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[['Mr. Ben Suleman'], ['MR. JAMES NGOLA']]"
+       "['Mr. Ben Suleman', 'MR. JAMES NGOLA']"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -169,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -177,27 +177,39 @@
     "\n",
     "for nombre in info_remitente:\n",
     "\n",
-    "    nombre_de_pila.append(re.findall(\"\\s\\w+\\s\", nombre))"
+    "    nombre_de_pila.extend((re.findall(\"\\s\\w+\\s\", nombre)))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 85,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "nombre_de_pila_sin_espacios = []\n",
+    "for nombre in nombre_de_pila:\n",
+    "    nombre = nombre.strip()\n",
+    "    nombre_de_pila_sin_espacios.append(nombre)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[[' Ben '], [' JAMES ']]"
+       "['Ben', 'JAMES']"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 86,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "nombre_de_pila"
+    "nombre_de_pila_sin_espacios"
    ]
   },
   {
@@ -212,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -221,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
@@ -230,7 +242,7 @@
        "['Date: Thu, 31 Oct 2002 05:10:00', 'Date: Thu, 31 Oct 2002 02:38:20 +0000']"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 62,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -241,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -249,21 +261,21 @@
     "\n",
     "for date in info_fecha:\n",
     "\n",
-    "    fecha.append(re.findall(\"\\d{2}\\s\\w{3}\\s\\d{4}\", date)) # Este Regex es: dos dígitos, espacio, tres letras, espacio, cuatro dígitos"
+    "    fecha.extend(re.findall(\"\\d{2}\\s\\w{3}\\s\\d{4}\", date)) # Este Regex es: dos dígitos, espacio, tres letras, espacio, cuatro dígitos"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[['31 Oct 2002'], ['31 Oct 2002']]"
+       "['31 Oct 2002', '31 Oct 2002']"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 64,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -283,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -292,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
@@ -302,7 +314,7 @@
        " 'Subject: URGENT BUSINESS ASSISTANCE AND PARTNERSHIP']"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 66,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -313,7 +325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -321,22 +333,22 @@
     "\n",
     "for subject in info_asunto:\n",
     "\n",
-    "    asuntos.append(re.findall(\"[A-Z]+\\s[A-Z]+\\s.*[A-Z]+\\s.*\", subject))"
+    "    asuntos.extend(re.findall(\"[A-Z]+\\s[A-Z]+\\s.*[A-Z]+\\s.*\", subject))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[['URGENT ASSISTANCE /RELATIONSHIP (P)'],\n",
-       " ['URGENT BUSINESS ASSISTANCE AND PARTNERSHIP']]"
+       "['URGENT ASSISTANCE /RELATIONSHIP (P)',\n",
+       " 'URGENT BUSINESS ASSISTANCE AND PARTNERSHIP']"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 68,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -355,31 +367,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [],
    "source": [
-    "diccionario_email ={\"Email\": direcciones_email, \"Nombre completo\": nombre_completo, \"Nombre de pila\": nombre_de_pila, \"Fecha\": fecha, \"Asunto\": asuntos}\n",
+    "diccionario_email ={\"Email\": direcciones_email, \"Nombre completo\": nombre_completo, \"Nombre de pila\": nombre_de_pila_sin_espacios, \"Fecha\": fecha, \"Asunto\": asuntos}\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'Email': [['bensul2004nng@spinfinder.com'], ['james_ngola2002@maktoob.com']],\n",
-       " 'Nombre completo': [['Mr. Ben Suleman'], ['MR. JAMES NGOLA']],\n",
-       " 'Nombre de pila': [[' Ben '], [' JAMES ']],\n",
-       " 'Fecha': [['31 Oct 2002'], ['31 Oct 2002']],\n",
-       " 'Asunto': [['URGENT ASSISTANCE /RELATIONSHIP (P)'],\n",
-       "  ['URGENT BUSINESS ASSISTANCE AND PARTNERSHIP']]}"
+       "{'Email': ['bensul2004nng@spinfinder.com', 'james_ngola2002@maktoob.com'],\n",
+       " 'Nombre completo': ['Mr. Ben Suleman', 'MR. JAMES NGOLA'],\n",
+       " 'Nombre de pila': ['Ben', 'JAMES'],\n",
+       " 'Fecha': ['31 Oct 2002', '31 Oct 2002'],\n",
+       " 'Asunto': ['URGENT ASSISTANCE /RELATIONSHIP (P)',\n",
+       "  'URGENT BUSINESS ASSISTANCE AND PARTNERSHIP']}"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 88,
      "metadata": {},
      "output_type": "execute_result"
     }
