--- a/python-leccion11-expresiones-regulares.ipynb
+++ b/python-leccion11-expresiones-regulares.ipynb
@@ -61,50 +61,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [],
    "source": [
-    "info_remitente = re.findall(\"From: .*\", email)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 54,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['From: \"Mr. Ben Suleman\" <bensul2004nng@spinfinder.com>',\n",
-       " 'From: \"MR. JAMES NGOLA.\" <james_ngola2002@maktoob.com>']"
-      ]
-     },
-     "execution_count": 54,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "info_remitente"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 55,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "direcciones_email = []\n",
+    "def extraer_email(texto):\n",
+    "    \n",
+    "    info_remitente = re.findall(\"From: .*\", texto)\n",
+    "    \n",
+    "    direcciones_email = []\n",
     "\n",
-    "for remitente in info_remitente:\n",
+    "    for remitente in info_remitente:\n",
     "\n",
-    "    direcciones_email.extend(re.findall(\"\\w+@\\w+\\.com\", remitente))"
+    "        direcciones_email.extend(re.findall(\"\\w+@\\w+\\.com\", remitente))\n",
+    "\n",
+    "    return direcciones_email"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [
     {
@@ -113,13 +89,13 @@
        "['bensul2004nng@spinfinder.com', 'james_ngola2002@maktoob.com']"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 92,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "direcciones_email"
+    "extraer_email(email)"
    ]
   },
   {
@@ -136,20 +112,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [],
    "source": [
-    "nombre_completo = []\n",
+    "def extraer_nombre_completo(texto):\n",
     "\n",
-    "for remitente in info_remitente:\n",
+    "    info_remitente = re.findall(\"From: .*\", texto)\n",
     "\n",
-    "    nombre_completo.extend(re.findall(\"\\w+\\.\\s\\w+\\s\\w+\", remitente)) #Cogemos str, punto, espacio, str, espacio, str"
+    "    nombre_completo = []\n",
+    "\n",
+    "    for remitente in info_remitente:\n",
+    "\n",
+    "        nombre_completo.extend(re.findall(\"\\w+\\.\\s\\w+\\s\\w+\", remitente)) #Cogemos str, punto, espacio, str, espacio, str\n",
+    "\n",
+    "    return nombre_completo    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [
     {
@@ -158,43 +140,43 @@
        "['Mr. Ben Suleman', 'MR. JAMES NGOLA']"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 94,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "nombre_completo"
+    "extraer_nombre_completo(email)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [],
    "source": [
-    "nombre_de_pila = []\n",
+    "def extraer_nombre_pila(texto):\n",
     "\n",
-    "for nombre in info_remitente:\n",
+    "    info_remitente = re.findall(\"From: .*\", texto)\n",
     "\n",
-    "    nombre_de_pila.extend((re.findall(\"\\s\\w+\\s\", nombre)))"
+    "    nombre_de_pila = []\n",
+    "\n",
+    "    for nombre in info_remitente:\n",
+    "\n",
+    "        nombre_de_pila.extend((re.findall(\"\\s\\w+\\s\", nombre)))\n",
+    "\n",
+    "    nombre_de_pila_sin_espacios = []\n",
+    "\n",
+    "    for nombre in nombre_de_pila:\n",
+    "        nombre = nombre.strip()\n",
+    "        nombre_de_pila_sin_espacios.append(nombre)    \n",
+    "\n",
+    "    return nombre_de_pila_sin_espacios"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "nombre_de_pila_sin_espacios = []\n",
-    "for nombre in nombre_de_pila:\n",
-    "    nombre = nombre.strip()\n",
-    "    nombre_de_pila_sin_espacios.append(nombre)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [
     {
@@ -203,13 +185,13 @@
        "['Ben', 'JAMES']"
       ]
      },
-     "execution_count": 86,
+     "execution_count": 97,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "nombre_de_pila_sin_espacios"
+    "extraer_nombre_pila(email)"
    ]
   },
   {
@@ -224,49 +206,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [],
    "source": [
-    "info_fecha = re.findall(\"Date: .*\", email)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 62,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['Date: Thu, 31 Oct 2002 05:10:00', 'Date: Thu, 31 Oct 2002 02:38:20 +0000']"
-      ]
-     },
-     "execution_count": 62,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "info_fecha"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 63,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "fecha = []\n",
+    "def extraer_fecha(texto):\n",
     "\n",
-    "for date in info_fecha:\n",
+    "    info_fecha = re.findall(\"Date: .*\", email)\n",
     "\n",
-    "    fecha.extend(re.findall(\"\\d{2}\\s\\w{3}\\s\\d{4}\", date)) # Este Regex es: dos dígitos, espacio, tres letras, espacio, cuatro dígitos"
+    "    fecha = []\n",
+    "\n",
+    "    for date in info_fecha:\n",
+    "\n",
+    "        fecha.extend(re.findall(\"\\d{2}\\s\\w{3}\\s\\d{4}\", date)) # Este Regex es: dos dígitos, espacio, tres letras, espacio, cuatro dígitos\n",
+    "\n",
+    "    return fecha"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [
     {
@@ -275,13 +234,13 @@
        "['31 Oct 2002', '31 Oct 2002']"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 99,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "fecha"
+    "extraer_fecha(email)"
    ]
   },
   {
@@ -295,50 +254,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [],
    "source": [
-    "info_asunto = re.findall(\"Subject:.*\", email)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 66,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['Subject: URGENT ASSISTANCE /RELATIONSHIP (P)',\n",
-       " 'Subject: URGENT BUSINESS ASSISTANCE AND PARTNERSHIP']"
-      ]
-     },
-     "execution_count": 66,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "info_asunto"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 67,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "asuntos = []\n",
+    "def extraer_asunto(texto):\n",
     "\n",
-    "for subject in info_asunto:\n",
+    "    info_asunto = re.findall(\"Subject:.*\", email)\n",
     "\n",
-    "    asuntos.extend(re.findall(\"[A-Z]+\\s[A-Z]+\\s.*[A-Z]+\\s.*\", subject))"
+    "    asuntos = []\n",
+    "\n",
+    "    for subject in info_asunto:\n",
+    "\n",
+    "        asuntos.extend(re.findall(\"[A-Z]+\\s[A-Z]+\\s.*[A-Z]+\\s.*\", subject))\n",
+    "\n",
+    "    return asuntos"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [
     {
@@ -348,13 +283,13 @@
        " 'URGENT BUSINESS ASSISTANCE AND PARTNERSHIP']"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 101,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "asuntos"
+    "extraer_asunto(email)"
    ]
   },
   {
@@ -367,17 +302,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 118,
    "metadata": {},
    "outputs": [],
    "source": [
-    "diccionario_email ={\"Email\": direcciones_email, \"Nombre completo\": nombre_completo, \"Nombre de pila\": nombre_de_pila_sin_espacios, \"Fecha\": fecha, \"Asunto\": asuntos}\n",
-    "\n"
+    "def crear_diccionario(texto):\n",
+    "\n",
+    "    diccionario_texto = {\"Email\" : extraer_email(texto), \n",
+    "                         \"Nombre completo\" : extraer_nombre_completo(texto), \n",
+    "                         \"Nombre de pila\" : extraer_nombre_pila(texto),\n",
+    "                         \"Fecha\" : extraer_fecha(texto),\n",
+    "                         \"Asunto\" : extraer_asunto(texto)}                         \n",
+    "\n",
+    "    return diccionario_texto"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 119,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "datos_email = crear_diccionario(email)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 121,
    "metadata": {},
    "outputs": [
     {
@@ -391,13 +342,13 @@
        "  'URGENT BUSINESS ASSISTANCE AND PARTNERSHIP']}"
       ]
      },
-     "execution_count": 88,
+     "execution_count": 121,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "diccionario_email"
+    "datos_email"
    ]
   },
   {
